--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.12",
+    "react-redux": "^7.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
