--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.12",
     "react-redux": "^7.2.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "html2pdf.js": "^0.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
