--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.12",
-    "react-redux": "^7.2.6",
-    "web-vitals": "^2.1.4",
-    "html2pdf.js": "^0.10.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
