--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.12",
-    "react-redux": "^7.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
